<resources>
    <string name="app_name">1_16_tikpik___short_video__social_networking</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_continue">Continue</string>
  <string name="lbl_sarah_wilona2">\@sarah_wilona</string>
  <string name="lbl_logout">Logout</string>
  <string name="msg_abc_g_gmail_com">abc**g@gmail.com</string>
  <string name="lbl_823">823</string>
  <string name="lbl_91_82m">91.82M</string>
  <string name="lbl_suggested">Suggested</string>
  <string name="msg_actress_singer">Actress &amp; Singer</string>
  <string name="lbl_daryl_nehls">Daryl Nehls</string>
  <string name="lbl_ariana_grande">Ariana Grande</string>
  <string name="lbl_about_you">About You</string>
  <string name="lbl_837_5k">837.5K</string>
  <string name="msg_haha_that_s_terrifying">"Haha that's terrifying &#128514;"</string>
  <string name="lbl_phone_number">Phone Number</string>
  <string name="lbl_sarah_wilona">Sarah Wilona</string>
  <string name="lbl_3m">3m</string>
  <string name="lbl_aubrey">Aubrey</string>
  <string name="lbl_ariana_wilson">Ariana Wilson</string>
  <string name="lbl_trending_sounds">Trending Sounds</string>
  <string name="msg_resend_code_in_55">Resend code in 55 s</string>
  <string name="lbl_53">53</string>
  <string name="lbl_dec_18_2024">Dec 18, 2024</string>
  <string name="msg_resend_code_in_53">Resend code in 53 s</string>
  <string name="msg_charolette_hanlin">Charolette Hanlin</string>
  <string name="lbl_55">55</string>
  <string name="lbl_938">938</string>
  <string name="msg_hi_jenny_good_morning2">Hi Jenny, good morning... ?</string>
  <string name="msg_i_m_your_fan_i2">"I'm your fan, I really like all your songs and amazing works
?"</string>
  <string name="lbl_clear_all">Clear All</string>
  <string name="msg_chiekochute_86_67m">chiekochute | 86.67M</string>
  <string name="msg_create_your_new">Create Your New Password</string>
  <string name="lbl_gaming">Gaming</string>
  <string name="msg_suggested_searches">Suggested Searches</string>
  <string name="lbl_animal_cruelty">Animal Cruelty</string>
  <string name="msg_choose_your_identity">Choose your identity &amp; help us to find accurate content for you.</string>
  <string name="lbl_harry_styles">Harry Styles</string>
  <string name="lbl_15_6k">15.6K</string>
  <string name="lbl_ariana_russel">Ariana Russel</string>
  <string name="lbl_technology">Technology</string>
  <string name="msg_late_night_talking">Late Night Talking</string>
  <string name="lbl_save_your_tears">Save Your Tears</string>
  <string name="lbl_andrew_ains">\@andrew_ains..</string>
  <string name="lbl_925">925</string>
  <string name="msg_how_are_you">How are you? &#128513;&#128513;</string>
  <string name="msg_facebook_friends">Facebook Friends</string>
  <string name="lbl_minor_safety">Minor Safety</string>
  <string name="lbl_qr_code">QR Code</string>
  <string name="lbl_side_to_side">Side to Side</string>
  <string name="lbl_rochel_foose">Rochel Foose</string>
  <string name="lbl_thad_eddings">Thad Eddings</string>
  <string name="lbl_32_17k">32.17K</string>
  <string name="lbl_andrew_aisnley2">andrew_aisnley</string>
  <string name="lbl_face_id">Face ID</string>
  <string name="lbl_827_4k">827.4K</string>
  <string name="lbl_837_9k">837.9K</string>
  <string name="lbl_password">Password</string>
  <string name="msg_instagram_friends">Instagram Friends</string>
  <string name="lbl_q_a">Q&amp;A</string>
  <string name="lbl_289_4m">289.4M</string>
  <string name="lbl_9_min_ago">9 min ago</string>
  <string name="msg_code_has_been_send">Code has been send to +1 111 ******99</string>
  <string name="lbl_3_6k_viewers">3.6K Viewers</string>
  <string name="lbl_krishna_barbe">Krishna Barbe</string>
  <string name="lbl_827_5m_videos">827.5M Videos</string>
  <string name="msg_yes_you_re_right_i">"Yes you're right.
I think we haven't talked in a long time &#128514;&#128514;"</string>
  <string name="msg_alfonzo_schuessler">Alfonzo Schuessler</string>
  <string name="lbl_827_5m">827.5M</string>
  <string name="lbl_bio">Bio</string>
  <string name="msg_find_friends_of2">Find friends of Instagram</string>
  <string name="lbl_60s">60s</string>
  <string name="lbl_37_97m">37.97M</string>
  <string name="lbl_22">2</string>
  <string name="lbl_message">Message</string>
  <string name="msg_would_you_like_to">Would you like to join us|</string>
  <string name="lbl_1_111_99">+1 111 ******99</string>
  <string name="lbl_mandarin">Mandarin</string>
  <string name="msg_find_your_friends">Find your friends and play together </string>
  <string name="lbl_female">Female</string>
  <string name="lbl_jenny_wilson3">Jenny_wilson</string>
  <string name="lbl_quick">Quick</string>
  <string name="lbl_jenny_wilson2">\@jenny_wilson</string>
  <string name="lbl_7_rings">7 Rings</string>
  <string name="lbl_english_us">English (US)</string>
  <string name="msg_jenny_wilson_received">Jenny_wilson received a total of 27M likes from all videos.</string>
  <string name="lbl_736_3k">736.3K</string>
  <string name="lbl_736">736</string>
  <string name="lbl_sign_up">Sign up</string>
  <string name="lbl_comments">Comments...</string>
  <string name="lbl_quick_upload">Quick Upload</string>
  <string name="lbl_safety_center">Safety Center</string>
  <string name="msg_2_use_of_your_personal">2. Use of Your Personal Data</string>
  <string name="msg_favorite_girl_by">Favorite Girl by Justin Bieber</string>
  <string name="msg_location_services">Location Services</string>
  <string name="msg_fun_entertainment">Fun &amp; Entertainment</string>
  <string name="lbl_privacy_policy">Privacy Policy</string>
  <string name="lbl_russian">Russian</string>
  <string name="lbl_english_uk">English (UK)</string>
  <string name="lbl_lizzo">Lizzo</string>
  <string name="msg_choose_your_interest">Choose Your Interest</string>
  <string name="lbl_account_control">Account Control</string>
  <string name="lbl_biometric_id">Biometric ID</string>
  <string name="lbl_photo">Photo</string>
  <string name="msg_liked_your_video">Liked your video</string>
  <string name="msg_add_a_fingerprint">Add a fingerprint to make your account
more secure.</string>
  <string name="lbl_736_2k">736.2K</string>
  <string name="lbl_via_sms">via SMS:</string>
  <string name="lbl_sunroof">Sunroof</string>
  <string name="lbl_users">Users</string>
  <string name="lbl_847">847</string>
  <string name="lbl_hannah_burress">Hannah Burress</string>
  <string name="lbl_private_account">Private Account</string>
  <string name="lbl_templates">Templates</string>
  <string name="lbl_938_6k">938.6K</string>
  <string name="msg_beautiful_girl_by">Beautiful Girl by Sean Kingston</string>
  <string name="lbl_security">Security</string>
  <string name="lbl_music">Music</string>
  <string name="lbl_367_5k">367.5K</string>
  <string name="lbl_ads">Ads</string>
  <string name="msg_yes_you_re_right_i2">"Yes you're right.
I think we haven't talked in a long time "</string>
  <string name="msg_arianacooper_24_5m">arianacooper | 24.5M followers</string>
  <string name="msg_confirm_new_password">Confirm New Password</string>
  <string name="lbl_ok">Ok</string>
  <string name="lbl_recent">Recent</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_or">or</string>
  <string name="lbl_spam">Spam</string>
  <string name="msg_harassment_or_bullying">Harassment or bullying</string>
  <string name="lbl_all_sounds">All Sounds</string>
  <string name="lbl_diy">DIY</string>
  <string name="lbl_inbox">Inbox</string>
  <string name="lbl_culture">Culture</string>
  <string name="lbl_comics">Comics</string>
  <string name="lbl_368k">368K</string>
  <string name="msg_please_put_your">Please put your finger on the fingerprint scanner to get started.</string>
  <string name="lbl_dec_17_2024">Dec 17, 2024</string>
  <string name="lbl2">\?&#128525;&#128525;</string>
  <string name="lbl_from_tikpik">From Tikpik</string>
  <string name="lbl3">&#128514;&#128514;</string>
  <string name="lbl_live">Live</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_662">662</string>
  <string name="msg_please_upload_1">Please upload 1 photo</string>
  <string name="lbl_help_center">Help Center</string>
  <string name="msg_hi_jenny_good_morning">Hi Jenny, good morning... &#128513;&#128513;</string>
  <string name="lbl_mentions_tags">Mentions &amp; Tags</string>
  <string name="msg_cyndy_lillibridge">Cyndy Lillibridge</string>
  <string name="lbl_freelancework2">freelancework</string>
  <string name="lbl_scan_qr_code">Scan QR Code</string>
  <string name="lbl_savannah_nguyen">Savannah Nguyen</string>
  <string name="lbl_theresa_webb">Theresa Webb</string>
  <string name="msg_wow_this_is_really">Wow, this is really epic</string>
  <string name="msg_designer_vid">Designer &amp; Vid...</string>
  <string name="lbl_534">534</string>
  <string name="lbl_cancel">Cancel</string>
  <string name="lbl_24_8k_comments">24.8K Comments</string>
  <string name="lbl_top">Top</string>
  <string name="lbl_edit_profile">Edit Profile</string>
  <string name="lbl_freelance_work">Freelance Work </string>
  <string name="lbl_55_65m">55.65M</string>
  <string name="lbl_pedro_huard">Pedro Huard</string>
  <string name="lbl_duet">Duet</string>
  <string name="lbl_jenny_wilson">Jenny Wilson</string>
  <string name="lbl_648">648</string>
  <string name="lbl_kristin_watson">Kristin Watson</string>
  <string name="lbl_oil_painting">Oil Painting</string>
  <string name="msg_1_types_of_data">1. Types of Data We Collect</string>
  <string name="lbl_camera">Camera</string>
  <string name="lbl_reply">Reply</string>
  <string name="msg_lorem_ipsum_dolor2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
  <string name="lbl_upload_photos">Upload Photos</string>
  <string name="lbl_01_00">01:00</string>
  <string name="msg_magna_etiam_tempor">Magna etiam tempor orci eu lobortis elementum nibh. Vulputate enim nulla aliquet porttitor lacus. Orci sagittis eu volutpat odio. Cras semper auctor neque vitae tempus quam pellentesque nec. Non quam lacus suspendisse faucibus interdum posuere lorem ipsum dolor. Commodo elit at imperdiet dui. Nisi vitae suscipit tellus mauris a diam. Erat pellentesque adipiscing commodo elit at imperdiet dui. Mi ipsum faucibus vitae aliquet nec ullamcorper. Pellentesque pulvinar pellentesque habitant morbi tristique senectus et.</string>
  <string name="msg_3_disclosure_of">3. Disclosure of Your Personal Data</string>
  <string name="lbl_3_days_ago">3 days ago</string>
  <string name="msg_lorem_ipsum_dolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</string>
  <string name="lbl_ariana">Ariana</string>
  <string name="lbl_1_168">1/168</string>
  <string name="msg_consequat_id_porta">Consequat id porta nibh venenatis cras sed. Ipsum nunc aliquet bibendum enim facilisis gravida neque. Nibh tellus molestie nunc non blandit massa. Quam pellentesque nec nam aliquam sem et tortor consequat id. Faucibus vitae aliquet nec ullamcorper sit amet risus. Nunc consequat interdum varius sit amet. Eget magna fermentum iaculis eu non diam phasellus vestibulum. Pulvinar pellentesque habitant morbi tristique senectus et. Lorem donec massa sapien faucibus et molestie. Massa tempor nec feugiat nisl pretium fusce id. Lacinia at quis risus sed vulputate odio. Integer vitae justo eget magna fermentum iaculis. Eget gravida cum sociis natoque penatibus et magnis.</string>
</resources>