<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearPrivacyPolicy"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle{&quot;name&quot;:&quot;onErrorContainer&quot;}">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageView android:id="@+id/imageArrowDown"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrow_down"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrow_down"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTitleSection"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/lbl_privacy_policy"
                style="@style/txtUrbanistromanbold24" tools:text="@string/lbl_privacy_policy"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearTypesOfData"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_24pxh"
            android:paddingStart="@dimen/_24pxh" android:paddingTop="@dimen/_16pxv">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTypesOfData"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_1_types_of_data"
                style="@style/txtUrbanistromanbold20" tools:text="@string/msg_1_types_of_data"/>
            <TextView android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:text="@string/msg_lorem_ipsum_dolor2"
                style="@style/txtUrbanistregular14_2" tools:text="@string/msg_lorem_ipsum_dolor2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtUseOfYourPersonal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_2_use_of_your_personal"
                style="@style/txtUrbanistromanbold20" tools:text="@string/msg_2_use_of_your_personal"/>
            <TextView android:id="@+id/txtDescription1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:text="@string/msg_magna_etiam_tempor"
                style="@style/txtUrbanistregular14_2" tools:text="@string/msg_magna_etiam_tempor"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDisclosureOf"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_3_disclosure_of"
                style="@style/txtUrbanistromanbold20" tools:text="@string/msg_3_disclosure_of"/>
            <TextView android:id="@+id/txtDescription2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:text="@string/msg_consequat_id_porta"
                style="@style/txtUrbanistregular14_2" tools:text="@string/msg_consequat_id_porta"/>
        </LinearLayout>
    </LinearLayout>
</layout>
