<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameSettings"
        android:layout_height="wrap_content" android:layout_width="match_parent">
        <ImageButton android:id="@+id/btnSettings"
            android:layout_gravity="top|end"
            android:layout_height="@dimen/_24pxh"
            android:layout_width="@dimen/_24pxh"
            android:paddingHorizontal="@dimen/_2pxh"
            android:paddingVertical="@dimen/_2pxv"
            android:scaleType="fitCenter"
            android:src="@drawable/img_settings_gray_900" tools:ignore="ContentDescription"/>
        <FrameLayout android:id="@+id/frameAdipiscingElit"
            android:layout_gravity="center"
            android:layout_height="@dimen/_136pxv" android:layout_width="@dimen/_370pxh">
            <TextView android:gravity="top|start"
                android:id="@+id/txtAdipiscingElit"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:letterSpacing="0.01"
                android:text="@string/msg_lorem_ipsum_dolor"
                style="@style/txtUrbanistregular14_1" tools:text="@string/msg_lorem_ipsum_dolor"/>
            <LinearLayout android:id="@+id/linearNinetyEight"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="vertical">
                <LinearLayout android:id="@+id/linearKristinWatson"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageKristinWatson"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_48pxh"
                        android:layout_width="@dimen/_48pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_play"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_play"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:id="@+id/txtKristinWatson"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.01"
                        android:singleLine="true"
                        android:text="@string/lbl_kristin_watson"
                        style="@style/txtUrbanistromanbold16_1" tools:text="@string/lbl_kristin_watson"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearText"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageImage"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_24pxh"
                        android:layout_width="@dimen/_24pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_iconly_bold_heart"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_iconly_bold_heart"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtText"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.01"
                        android:singleLine="true"
                        android:text="@string/lbl_938"
                        style="@style/txtUrbanistromanmedium12_1" tools:text="@string/lbl_938"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtDuration"
                        android:layout_gravity="bottom"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.01"
                        android:singleLine="true"
                        android:text="@string/lbl_3_days_ago"
                        style="@style/txtUrbanistromanmedium12_2" tools:text="@string/lbl_3_days_ago"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtReply"
                        android:layout_gravity="bottom"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.01"
                        android:singleLine="true"
                        android:text="@string/lbl_reply"
                        style="@style/txtUrbanistromanmedium12_2" tools:text="@string/lbl_reply"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
